Actualización pair funciones

--- a/Pair_funciones.ipynb
+++ b/Pair_funciones.ipynb
@@ -92,6 +92,45 @@
     "\n",
     "Descripción: Crea una función llamada calcular_promedio que tome una lista de números como parámetro y devuelva el promedio de todos sus elementos."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.8"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def media_num(num1,num2,num3,num4,num5):\n",
+    "    return (num1 + num2+ num3+ num4 +num5) / 5\n",
+    "\n",
+    "promedio = media_num(2, 4, 5, 6, 7)\n",
+    "promedio"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 5 Calcular el interés compuesto\n",
+    "Descripción: Crea una función llamada calcular_interes_compuesto que tome el capital inicial, la tasa de interés y el número de períodos como parámetros y devuelva el beneficio final después del interés compuesto"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
