Actualización ejercicios Pair Funciones

--- a/Pair_clases.ipynb
+++ b/Pair_clases.ipynb
@@ -40,18 +40,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from datetime import date\n",
+    "\n",
     "class Empleados:\n",
     "    \n",
-    "    def __init__(self, nombre, apellidos, edad, posicion, fecha_ingreso, vacaciones, herramientas):\n",
+    "    def __init__(self, nombre, apellidos, edad, posicion, anio_ingreso, mes_ingreso, dia_ingreso, vacaciones, herramientas):\n",
     "        self.nombre = nombre\n",
     "        self.apellidos = apellidos\n",
     "        self.edad = edad\n",
     "        self.posicion = posicion\n",
-    "        self.fecha_ingreso = fecha_ingreso\n",
+    "        self.fecha_ingreso = date(anio_ingreso, mes_ingreso, dia_ingreso)\n",
     "        self.vacaciones = vacaciones\n",
     "        self.herramientas = herramientas\n",
     "\n",
@@ -69,86 +71,121 @@
     "                print(f\"Aconsejamos que dejes de usar Excel y aprendas Python.\")\n",
     "            elif herramienta.lower() == \"python\":\n",
     "                print(f\"Python es una herramienta top, eres un(a) crack!\")\n",
+    "\n",
+    "    def calcular_antiguedad(self):\n",
+    "        from datetime import date \n",
+    "        fecha_actual = date.today()\n",
+    "          # Cálculo de años de antigüedad\n",
+    "        years = fecha_actual.year - self.fecha_ingreso.year\n",
+    "        \n",
+    "        # Cálculo de meses de antigüedad\n",
+    "        months = fecha_actual.month - self.fecha_ingreso.month\n",
+    "\n",
+    "       # Generar mensaje descriptivo\n",
+    "        mensaje = f\"{self.nombre} lleva {years} años y {months} meses en la empresa.\"\n",
+    "        return mensaje\n",
+    "    \n",
+    "    def aumento_vacaciones(self, dias_solicitados):\n",
+    "        \n",
+    "        if dias_solicitados > 0:\n",
+    "            self.vacaciones += dias_solicitados\n",
+    "            print(f\"Confirmado, has solicitado {dias_solicitados} días, ahora tus dias de vacaciones aumentados son {self.vacaciones}.\")\n",
+    "        \n",
+    "        else:\n",
+    "            (print(\"La solicitud debe ser un número positivo.\"))\n",
+    "\n",
+    "    def registrar_herramienta(self, nueva_herramienta):\n",
+    "        self.nueva_herramienta = nueva_herramienta\n",
+    "\n",
+    "        for herramientas in self.herramientas:\n",
+    "\n",
+    "            if nueva_herramienta is not self.herramientas:\n",
+    "                self.herramientas.append(nueva_herramienta)\n",
+    "                print(f\"Confirmado, la herramienta {nueva_herramienta} se ha incluido en el listado\")\n",
+    "                print(self.herramientas)\n",
+    "            else:\n",
+    "                print(f\"La herramienta {nueva_herramienta} ya ha sido registrada antes\")\n",
+    "\n",
+    "    def cambiar_posicion(self, nueva_posicion, nuevo_salario):\n",
+    "        self.nueva_posicion = nueva_posicion\n",
+    "        self.nuevo_salario = nuevo_salario\n",
+    "        self.posicion = nueva_posicion\n",
+    "        print(f\"Felicidades {self.nombre}, tu nueva posición es {nueva_posicion} y tu salario es {nuevo_salario}€ anuales\")\n",
+    "\n",
+    "    def tomar_vacaciones(self, dias_solicitados):\n",
+    "        self.dias_solicitados = int(input(\"¿Cuántos dias quieres tomar de vacaciones?\"))\n",
+    "        \n",
+    "        while self.vacaciones > 0 and self.dias_solicitados >= 1:\n",
+    "            int(input(\"¿Cuántos dias quieres tomar de vacaciones?\"))\n",
+    "\n",
+    "            if self.dias_solicitados <= self.vacaciones:\n",
+    "                self.vacaciones -= self.dias_solicitados\n",
+    "                print(f\"Confirmado, has solicitado {dias_solicitados} días, ahora tus dias de vacaciones restantes son {self.vacaciones}.\")\n",
+    "                break\n",
     "            \n",
-    "    def calcular_antiguedad(self, fecha_actual):\n",
-    "        pass\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Método \n",
-    "calcular_antiguedad\n",
-    ": Calcula la antigüedad del empleado en años y meses desde el año de ingreso hasta la fecha actual.\n",
+    "            else:\n",
+    "                print(\"Lo siento, no tienes suficientes días\")\n",
+    "                break\n",
+    "    \n",
+    "        else:\n",
+    "            print(\"Error: valor no válido, ingrese nuevamente\")\n",
+    "            \n",
+    "            \n",
     "\n",
-    "Calcular la Antigüedad en Años y Meses: Utiliza el módulo datetime de Python para obtener el año actual y el mes actual.\n",
-    "\n",
-    "Generar el Mensaje de Antigüedad: Usa los valores calculados para años y meses de antigüedad para generar un mensaje descriptivo. Por ejemplo, \"Juan lleva 5 años y 3 meses en la empresa\"."
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "empleado1 = Empleados(\"María\", \"López\", 35, \"Diseñadora\", 2018, 14, [\"ordenador\", \"ratón\", \"Python\", \"pantalla extra\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El nombre del empleado es: María.\n",
-      "Su posición en la empresa es: Diseñadora.\n",
-      "Los días de vacaciones para el año: 2024 que le quedan son: 14.\n"
+      "Confirmado, has solicitado 5 días, ahora tus dias de vacaciones aumentados son 25.\n",
+      "None\n",
+      "Felicidades Juan, tu nueva posición es Programador Senior y tu salario es 45000€ anuales\n",
+      "Programador Senior\n",
+      "Confirmado, has solicitado 7 días, ahora tus dias de vacaciones restantes son 18.\n"
      ]
     }
    ],
+   "source": [
+    "empleado1 = Empleados(\"María\", \"López\", 35, \"Diseñadora\", 2018,5,10, 14, [\"ordenador\", \"ratón\", \"Excel\", \"pantalla extra\"])\n",
+    "empleado2 = Empleados(\"Juan\",\"Gutiérrez\",30,\"programador\",2020,4,14,20,[\"ordenador\", \"Java\", \"Python\",\"pantalla extra\"])\n",
+    "\n",
+    "print(empleado2.aumento_vacaciones(5))\n",
+    "empleado2.cambiar_posicion(\"Programador Senior\", 45000)\n",
+    "print(empleado2.posicion)\n",
+    "empleado2.tomar_vacaciones(7)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "empleado1.descripcion(2024)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "14"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "empleado1.vacaciones"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Las herramientas del empleado son: ordenador, ratón, Python, pantalla extra.\n",
-      "Python es una herramienta top, eres un(a) crack!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "empleado1.cambiando_posicion()"
    ]
