Ex. 4 and 5 uploaded

--- a/Pair_regex.ipynb
+++ b/Pair_regex.ipynb
@@ -126,6 +126,8 @@
    "metadata": {},
    "source": [
     "\n",
+    "# Ejercicio 4\n",
+    "\n",
     "Encontrar todas las palabras que comienzan con una vocal en un texto.\n",
     "\n",
     "Descripción: Encontrar todas las palabras en un texto que comienzan con una vocal (a, e, i, o, u).\n",
@@ -136,14 +138,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['El', 'está', 'Ana', 'una', 'es']\n"
+     ]
+    }
+   ],
    "source": [
     "# Ejercicio 4\n",
+    "\n",
+    "import re\n",
+    "\n",
     "texto = \"El perro está ladrando. Ana tiene una manzana. La casa es grande.\"\n",
     "\n",
-    "patron= ^[a,e,i,o,u]"
+    "patrón = r'\\b[aeiouAEIOU]\\w*'\n",
+    "\n",
+    "palabras_con_vocal = re.findall(patrón, texto)\n",
+    "\n",
+    "print(palabras_con_vocal)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ejercicio 5\n",
+    "\n",
+    "Extraer todos los hashtags de un texto.\n",
+    "\n",
+    "Descripción: Extraer todos los hashtags (#) presentes en una cadena de texto.\n",
+    "\n",
+    "Probad con el siguiente string:\n",
+    "\n",
+    "texto = \"Me encanta el #deporte. #FelizViernes a todos. Estoy en la conferencia #Tech"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['#deporte', '#FelizViernes', '#Tech']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ejercicio 5 \n",
+    "\n",
+    "import re\n",
+    "\n",
+    "texto = \"Me encanta el #deporte. #FelizViernes a todos. Estoy en la conferencia #Tech\"\n",
+    "\n",
+    "hashtags = re.findall(r'#\\w+', texto)\n",
+    "\n",
+    "print(hashtags)\n"
    ]
   }
  ],
@@ -163,7 +220,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
